Rename the method getType to getName